@@ -1,3 +1,9 @@
+2008-09-12  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_draw.c (murrine_draw_tab), (murrine_draw_menu_frame):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_tab):
+	Better tab highlighting, upgrade suggested
+
 2008-09-09  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_draw.c (murrine_draw_progressbar_trough),
